WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243711
Fix leaks in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=243711
Summary
Fix leaks in WebKitTestRunner
David Kilzer (:ddkilzer)
Reported
2022-08-08 20:05:06 PDT
Fix leaks in WebKitTestRunner.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-08 20:06:31 PDT
<
rdar://problem/98357151
>
David Kilzer (:ddkilzer)
Comment 2
2022-08-08 20:36:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3136
EWS
Comment 3
2022-08-09 14:22:31 PDT
Committed
253271@main
(2c5c5725a6c0): <
https://commits.webkit.org/253271@main
> Reviewed commits have been landed. Closing PR #3136 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug