Fix leaks in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=243711 <rdar://98357151>

Reviewed by Geoffrey Garen.

* Source/WebKit/UIProcess/API/C/WKDownloadRef.cpp:
(WKDownloadSetClient):
- Fix leak of API::String since
  TestController::decideDestinationWithSuggestedFilename()
  returns a +1 retained WKStringRef.
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::runOpenPanel):
- Fix leak of WKArrayRef since
  WKOpenPanelParametersCopyAllowedMIMETypes() returns a +1
  retained WKArrayRef.
* Tools/WebKitTestRunner/mac/main.mm:
(disableAppNapInUIProcess):
- Use idomatic NeverDestroyed<> declaration to make `leaks`
  stop reporting a false positive leak.

Canonical link: https://commits.webkit.org/253271@main